--- a/GetStorm/GetStorm/View/Base.lproj/Main.storyboard
+++ b/GetStorm/GetStorm/View/Base.lproj/Main.storyboard
@@ -2,7 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OFm-rY-GAc">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -53,6 +54,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aDA-tZ-wV2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-555.07246376811599" y="73.660714285714278"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="h0N-aO-QrM">
+            <objects>
+                <viewController storyboardIdentifier="DetailView" id="6MH-Xz-luL" customClass="DetailViewController" customModule="GetStorm" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4p1-nS-MCM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SiU-hd-X6H">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="0PQ-ql-TYi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="SiU-hd-X6H" secondAttribute="trailing" id="4T1-3J-e8m"/>
+                            <constraint firstItem="SiU-hd-X6H" firstAttribute="leading" secondItem="4p1-nS-MCM" secondAttribute="leading" id="ATn-Be-TM8"/>
+                            <constraint firstItem="SiU-hd-X6H" firstAttribute="top" secondItem="4p1-nS-MCM" secondAttribute="top" id="ot6-7f-su4"/>
+                            <constraint firstAttribute="bottom" secondItem="SiU-hd-X6H" secondAttribute="bottom" id="yAl-ZP-Q2L"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="detailImageView" destination="SiU-hd-X6H" id="dme-Gc-aHi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CTX-Eq-EOB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1275" y="74"/>
         </scene>
     </scenes>
     <resources>
